Some work on the server and protocol
Largely just renaming and fixing up some classes.